--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -107,7 +107,7 @@ Assuming HIP 54 and HIP 55 pass without additional changes
 ## Current progress on Testnet
 Hardware-based Hotspots are now participating in a new Proof-of-Coverage with Validators on Testnet. In this test, all Hotspots use Testnet Validators for blockchain information and do not need to sync the blockchain directly. They also receive PoC Challenges from Validators.
 
-You can see their progress on [Testnet](testnet-explorer.helium.com).
+You can see their progress on [Testnet](https://testnet-explorer.helium.com).
 
 These Hotspots are also running a dockerized version of [gateway-rs (rust-based gateway firmware)](https://github.com/helium/gateway-rs) and an updated packet forwarder that relies on Validators.
 
