--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -14,7 +14,7 @@ converting existing Approved Hotspots to Light Hotspots. As part of this
 migration, we have introduced a new Hotspot variant onto the network, called
 a [Data Only Hotspot](/mine-hnt/data-only-hotspots). 
 
-A conversion of a Full Hotspot running Light Hotspot software is now being tested on [Testnet](testnet-explorer.helium.com).
+A conversion of a Full Hotspot running Light Hotspot software is now being tested on [Testnet](https://testnet-explorer.helium.com).
 
 This project is in progress and subject to change. **Last updated Monday February 14, 2022**.
 
