--- a/docs/mine-hnt/validators/testnet/test-cases.mdx
+++ b/docs/mine-hnt/validators/testnet/test-cases.mdx
@@ -23,4 +23,4 @@ Perform the following test cases to help with testing:
 * Transfer ownership of stake to different validator node (same wallet, different wallet)
 * Set up wallet tied to multiple validator nodes
 
-Use the [#validator](https://discord.com/channels/404106811252408320/857353417739730954) channel on our [Discord](https://discord.gg/helium) server to provide feedback and report issues.
+Use the [#validator](discord://discord.com/channels/404106811252408320/857353417739730954) channel on our [Discord](https://discord.gg/helium) server to provide feedback and report issues.
