--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -20,7 +20,7 @@ This project is in progress and subject to change. **Last updated Monday January
 :::info
 
 For real-time development and community support of Data Only Hotspots and Light
-Hotspots, please join the [#gateway-development](https://discord.com/channels/404106811252408320/784462269072277576) channel on
+Hotspots, please join the [#gateway-development](discord://discord.com/channels/404106811252408320/784462269072277576) channel on
 [Helium Discord](https://discord.gg/helium)
 
 :::
