--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -34,7 +34,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 <div style={{padding: '0px 0 50px'}}>
 
 :::info
-[Helium Discord](https://discord.gg/helium) is the best place to get real-time support from the community. And the [#console](https://discord.com/channels/404106811252408320/730245319882965093) and [#sensor-dev](https://discord.com/channels/404106811252408320/730246602861838467)
+[Helium Discord](https://discord.gg/helium) is the best place to get real-time support from the community. And the [#console](discord://discord.com/channels/404106811252408320/730245319882965093) and [#sensor-dev](discord://discord.com/channels/404106811252408320/730246602861838467)
 channels are the two most relevant for developers using the Network. 
 :::
 
