--- a/docs/mine-hnt/data-only-guides/dragino.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino.mdx
@@ -16,7 +16,7 @@ LoRaWAN gateway such as the LPS8 or DLOS8 to work with the Helium network.
 
 Dragino Hotspots will only mine HNT through packet transfer, and is considered a Data Only Hotspot. The ability to mine HNT with anything other than
 [Approved Hotspots](https://helium.com/mine) is not currently supported. Please
-join the [#gateway-development](https://discord.com/channels/404106811252408320/784462269072277576) channel in the Helium Discord Server for
+join the [#gateway-development](discord://discord.com/channels/404106811252408320/784462269072277576) channel in the Helium Discord Server for
 the latest updates.
 
 :::
