--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -18,7 +18,7 @@ have.
 :::info
 
 If none of the below fixes your Hotspot connection, please visit the Helium
-Community Discord, [#hotspot-issues](https://discord.com/channels/404106811252408320/813976183519445084).
+Community Discord, [#hotspot-issues](discord://discord.com/channels/404106811252408320/813976183519445084).
 
 :::
 
