--- a/docs/mine-hnt/validators/monitoring.mdx
+++ b/docs/mine-hnt/validators/monitoring.mdx
@@ -13,7 +13,7 @@ The Docker commands will assume you have the same prefix to get you executing a 
 
 Visit the [Helium Validator Status Page](http://validators-status.helium.com/) (and sign up for alerts, if you haven't already).
 
-This status page will provide the latest updates on important issues that impact validators (chain halts or other major events).
+This status page will provide the latest updates on important issues that impact validators like chain halts or other major events.
 
 ## Check the p2p network
 
