--- a/docs/mine-hnt/validators/monitoring.mdx
+++ b/docs/mine-hnt/validators/monitoring.mdx
@@ -11,7 +11,7 @@ The Docker commands will assume you have the same prefix to get you executing a 
 
 ## Confirm the network is working
 
-Visit the [Helium Validator Status Page](http://validators-status.helium.com/) (and sign up for alerts, if you haven't already).
+Visit the [Helium Validator Status Page](http://validators-status.helium.com) (and sign up for alerts, if you haven't already).
 
 This status page will provide the latest updates on important issues that impact validators like chain halts or other major events.
 
