--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -15,7 +15,7 @@ Beginning March 2022, all [HIP-19](https://github.com/dewi-alliance/hotspot-manu
 
 Maker Apps can also include extra enhancements such as Proof-of-Coverage analysis, earnings tools, and more. 
 
-For more information, read our blog post announcing this change.
+For more information, [read our blog post announcing this change](https://blog.helium.com/the-future-of-hotspot-apps-and-wallets-in-the-helium-ecosystem-a5b904b01d62).
 
 
 ## SDKs and Starter Apps
