--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -71,7 +71,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
     	<div class="col col--6 borderTop" >
      <div>
         <h3>Maker Apps</h3>
-        	<p style={{marginBottom:40}}>Makers have their own App to perform Hotspot onboarding, diagnostics, and troubleshooting. <a href="https://docs.helium.com/mine-hnt/maker-apps">Read more here</a>.</p>
+        	<p style={{marginBottom:40}}>Makers have their own App to perform Hotspot onboarding, diagnostics, and troubleshooting. <a href="/mine-hnt/maker-apps">Read more here</a>.</p>
         </div>
     </div>
     </div>
