--- a/docs/troubleshooting/replace-sd-card.mdx
+++ b/docs/troubleshooting/replace-sd-card.mdx
@@ -5,7 +5,7 @@ sidebar_label: Replacing SD Card
 slug: /troubleshooting/replace-sd-card
 ---
 
-# Replacing SD Card
+# Replacing SD Card (Original Helium Hotspots)
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
@@ -39,6 +39,12 @@ replace it with a brand new one:
 8. Place the newly flashed card back into the card reader slot.
 9. Plug the Hotspot back and and confirm that it boots up.
 10. Screw the Hotspot back together.
+
+:::info
+
+This set of instructions are for Original Helium Hotspots. [The instructions for RAK/MNTD Hotspots can be found here](https://support.getmntd.com/hc/en-us/articles/4418137820951-I-need-to-replace-the-microSD-card-on-my-hotspot).
+
+:::
 
 #### If you have purchased a pre-flashed card, the only steps you need are:
 
