--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -1135,8 +1135,8 @@ _Body Parameters_
 | app_eui (required) | _string_ | LoRaWAN Application EUI              |
 | app_key (required) | _string_ | LoRaWAN Application Key              |
 | dev_eui (required) | _string_ | LoRaWAN Device EUI                   |
-| Config_profile_id (required) | _string_ | Config profile uuid to attach                   |
-| Label_ids | Array of strings | Array of label uuids to attach to device               |
+| config_profile_id (required) | _string_ | Config profile uuid to attach                   |
+| label_ids | Array of strings | Array of label uuids to attach to device               |
 
 
 </TabItem>
@@ -1175,7 +1175,7 @@ _Body Parameters_
 
 | Parameter Name   | Type     | Description   |
 | ---------------- | -------- | ------------- |
-| Config_profile_id (required) | _string / null_ | Config profile uuid to attach or set to null to remove |
+| config_profile_id (required) | _string / null_ | Config profile uuid to attach or set to null to remove |
 
 </TabItem>
 <TabItem value="response">
@@ -1210,7 +1210,7 @@ _Body Parameters_
 | Parameter Name     | Type     | Description                          |
 | ------------------ | -------- | ------------------------------------ |
 | name (required)    | _string_ | A human-friendly name for the device |
-| Config_profile_id (required) | _string_ | Config profile uuid to attach                   |
+| config_profile_id (required) | _string_ | Config profile uuid to attach                   |
 
 </TabItem>
 <TabItem value="response">
@@ -1249,7 +1249,7 @@ _Body Parameters_
 
 | Parameter Name   | Type     | Description   |
 | ---------------- | -------- | ------------- |
-| Config_profile_id (required) | _string_ | Config profile uuid to attach or set to null to remove |
+| config_profile_id (required) | _string_ | Config profile uuid to attach or set to null to remove |
 
 </TabItem>
 <TabItem value="response">
