Revert "Update troubleshooting.mdx"
This reverts commit 4926d01f9d93b7f1b503828bcd57d94eed93b1e2.

--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -103,7 +103,7 @@ For the time/blocks when your validator accrued penalties, check your metrics da
 
 If you don't have a metrics dashboard and think a non-luck element may have caused your penalty, please set up metrics monitoring.
 
-Two options are [Tedder's miner_exporter](https://github.com/tedder/miner_exporter) and the [PaulVMo miner_exporter fork](https://github.com/PaulVMo/miner_exporter), which can be used in conjunction with Grafana (and Prometheus's built-in node_exporter) for detailed validator monitoring.
+One option is [Tedder's miner_exporter](https://github.com/tedder/miner_exporter), which can be used in conjunction with Grafana (and Prometheus's built-in node_exporter) for detailed validator monitoring.
 
 Baselining your instance via command line tools is also documented here [Baselining Your Validator](https://docs.helium.com/mine-hnt/validators/requirements).
 
